@@ -1,3 +1,15 @@
+Mon Oct 18 13:49:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ciao/Contexts/Session/Session_Context_T.h:
+        * ciao/Contexts/Session/Session_Context_T.cpp:
+          Don't cache the component
+
+        * ciao/Deployment/Handlers/Container_Handler.cpp:
+          Fixed some leaks
+
+        * connectors/dds4ccm/impl/DomainParticipantManager.cpp:
+          Added a debug statement to show when we are finalizing dds
+
 Mon Oct 18 13:49:28 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * MPC/config/dds4ccm_impl.mpb:
